Added some images

--- a/paper/tinyplanets.tex
+++ b/paper/tinyplanets.tex
@@ -60,7 +60,7 @@
 \end{figure}
 
 \begin{figure}
-\caption{Left, the unmodified algorithm that produces indexed meshes and interpolates vertex normals. Right, our modified algorithm that produces surface normals.}
+\caption{Left, the unmodified algorithm after 2 iterations that produces indexed meshes and interpolates vertex normals. Right, our modified algorithm that produces surface normals.}
 \label{fig_isn}
 \end{figure}
 
