Added more bibliography and images

--- a/paper/tinyplanets.bib
+++ b/paper/tinyplanets.bib
@@ -24,3 +24,10 @@
 } 
 
 
+@misc{akahler,
+  author = "Andreas Kahler",
+  title = "Creating an icosphere mesh in code",
+  year = 2009,
+  howpublished = "http://bit.ly/1YK9w7W",
+  note = {Accessed: 2015-11-1}
+}
