--- a/paper/tinyplanets.tex
+++ b/paper/tinyplanets.tex
@@ -40,7 +40,8 @@
 
 \section{\uppercase{Material System}}
 \label{sec:mat_sys}
-\noindent A material system is a framework that builds on top of and abstracts the functionality and bindings of basic vertex and pixel/fragment shaders, and is commonly used in real-time graphics applications. Materials combine a vertex and fragment shader in order to re-use common shading functionality amongst multiple meshes, and provide access to shader parameters (like emissive and diffuse colors, specular power, textures, etc.) in order to customize the appearance of different surfaces; the result is that only these parameters need to be changed to represent a multitude of surfaces rather than writing and loading shader programs for each surface. An added benefit is that it becomes possible to render all meshes with common materials without changing the shader program on the GPU by simply modifying the current shader program's inputs, improving performance. Our material system implements basic Phong shading in a single vertex and fragment shader pair, and allows customization of ambient, emissive, diffuse, and specular colors, specular power, and a single texture. The system also adopts the concept of material instances in order to allow different meshes using the same material to modify parameters without affecting each other. Figure \ref{fig_ms} is a visual representation of the system we have designed and implemented for the project. The quicker iteration time provided by the material system in customizing the different meshes in the application allowed us to focus on achieving the stylized look of our original goal.
+\noindent A material system is a framework that builds on top of and abstracts the functionality and bindings of basic vertex and pixel/fragment shaders, and is commonly used in real-time graphics applications. Materials combine a vertex and fragment shader in order to re-use common shading functionality amongst multiple meshes, and provide access to shader parameters (like emissive and diffuse colors, specular power, textures, etc.) in order to customize the appearance of different surfaces; the result is that only these parameters need to be changed to represent a multitude of surfaces rather than writing and loading shader programs for each surface. An added benefit is that it becomes possible to render all meshes with common materials without changing the shader program on the GPU by simply modifying the current shader program's inputs, thereby improving performance.
+Our material system implements basic Phong shading in a single vertex and fragment shader pair, and allows customization of ambient, emissive, diffuse, and specular colors, specular power, and a single texture. The system also adopts the concept of material instances in order to allow different meshes using the same material to modify parameters without affecting each other. Figure \ref{fig_ms} is a visual representation of the system we have designed and implemented for the project. The quicker iteration time provided by the material system in customizing the different meshes in the application allowed us to focus on achieving the stylized look of our original goal.
 
 \begin{figure}
 \includegraphics[scale=0.75]{./images/materials/ms_overview.png}
@@ -50,7 +51,8 @@
 
 \section{\uppercase{IcoSpheres}}
 \label{sec:icosphere}
-\noindent An icosphere is one of two of the most common ways of rendering spheres in computer graphics applications, the other being the UV sphere. An icosphere starts by taking a 20 sided polyhedron (icosahedron)  and recursively subdividing the faces to add detail. This method of generation makes the sphere's vertexes to be evenly distributed along the surface, which is a desirable trait for our use case since it lends itself better for deformation than UV spheres [REF]. Figure \ref{fig_isa} illustrates the basic idea behind this algorithm. The number of iterations can be changed to produce more or less detailed icospheres for planetary generation. In the general algorithm, generated vertices are cached in order to avoid duplicates, reduce generation time, and allow for vertex indexing on the GPU. Furthermore, normals are trivial to produce: because we generate a unit sphere, normals are vertices have the same x,y,z components of the vertices themselves. This method - when combined with Phong shading - produces incredibly smooth-shaded spheres after only a few iterations; however, our stylistic goal involves flat shading, so we modified the algorithm to duplicate vertices and calculate surface normals per-triangle. Figure \ref{fig_isn} shows the difference in the two techniques. Interestingly, the iterative nature of generating an icosphere lends itself well to Level of Detail (LOD) systems, where lower iteration counts can be used for distant icospheres, though this concept was not explored in our project.
+\noindent An icosphere is one of two of the most common ways of rendering spheres in computer graphics applications, the other being the UV sphere. An icosphere starts by taking a 20-sided polyhedron (icosahedron)  and recursively subdividing the faces to add detail. This method of generation causes the sphere's vertexes to be evenly distributed along the surface, which is a desirable trait for our use case as it lends itself better for deformation than UV spheres \cite{pnoise}. Figure \ref{fig_isa} illustrates the basic idea behind this algorithm. The number of iterations can be changed to produce more or less detailed icospheres for planetary generation.
+In the general algorithm, generated vertices are cached in order to avoid duplicates, reducing generation time, and allowing for vertex indexing on the GPU. Furthermore, normals are trivial to produce: because we generate a unit sphere, normals have the same \textit{x}, \textit{y}, and \textit{z} components of the vertices themselves. This method - when combined with Phong shading - produces incredibly smooth-shaded spheres after only a few iterations; however, our stylistic goal involves flat shading, so we modified the algorithm to duplicate vertices and calculate surface normals per-triangle. Figure \ref{fig_isn} shows the difference in the two techniques. Interestingly, the iterative nature of generating an icosphere lends itself well to Level of Detail (LOD) systems, where lower iteration counts can be used for distant icospheres, though this concept was not explored in our project.
 
 \begin{figure}
 \includegraphics[scale=0.24]{./images/icospheres/icosphereslod.png}
@@ -78,7 +80,7 @@ The process to create the noise is then repeated and the generation function is 
 
 \subsection{Multi Fractal Perlin Noise}
 \label{sec:mfpnois}
-Classical Perlin noise is homogeneous and isotropic, this plays against the rationale to use Perlin noise: creating natural occurring patterns.  As defined in \cite{ondrej07} a \textit{multifractal} is a heterogeneous fractal, this is achieved by parameterizing the dimension of the fractal function with another attribute, such as the height value of the terrain, this makes it so values closer to 0 (sea level) are smoothed out, whereas high values higher octaves have a bigger effect causing jags.  The algorithm implementation is based in \cite{pnoise} and [REF].
+Classical Perlin noise is homogeneous and isotropic, this plays against the rationale to use Perlin noise: creating natural occurring patterns.  As defined in \cite{ondrej07} a \textit{multifractal} is a heterogeneous fractal, this is achieved by parameterizing the dimension of the fractal function with another attribute, such as the height value of the terrain, this makes it so values closer to 0 (sea level) are smoothed out, whereas high values higher octaves have a bigger effect causing jags.  The algorithm implementation is based on \cite{pnoise} and [REF].
 
 \section{\uppercase{Terrain Generation}}
 \label{sec:tgeneration}
@@ -103,7 +105,7 @@ Planetary terrain is colored per-vertex using a weighted color look-up table whe
 \label{fig_iterations}
 \end{figure}
 
-\section{\uppercase{Folliage}}
+\section{\uppercase{Foliage}}
 \label{sec:fol}
 \noindent When planning the design of our foliage system, we initially look at using an L-System for the generation of trees, however due to our low polygon style, the detail that an L-System provides  was not needed, however we did use similar concepts for creating the tree branching. 
 For the regular tree types there are three options or 'levels' that we can pass in as a parameter allowing for different tree variations. Figure \ref{fig_all_trees} and Figure \ref{fig_all_trees} show examples of the levels of branching, although our scene does not use Figure \ref{fig_all_trees}, this is just an example of how the basic concept of an L-System was integrated into our project.
