Citation for material stuff, icospheres normals image and updated paper

--- a/paper/tinyplanets.bib
+++ b/paper/tinyplanets.bib
@@ -31,3 +31,11 @@
   howpublished = "http://bit.ly/1YK9w7W",
   note = {Accessed: 2015-11-1}
 }
+
+@book{gengines,
+  title = "Game Engine Architecture, Second Edition",
+  author = "Gregory, J.",
+  isbn = "9781466560062",
+  year = "2014",
+  publisher = "CRC Press"
+}
